--- a/index.html
+++ b/index.html
@@ -1438,12 +1438,12 @@
     <form>
     <fieldset>
     <legend>Countries</legend>
-    <button id="button" class="autocompare">United States</button> 
+    <button id="button1" class="autocompare">United States</button> 
     <select id="selectButton">
-       <option id ="button4">California</option>
-       <option id ="button3">Texas</option>
-       <option id ="button2">Arizona</option>
-       <option id ="button1">New York</option>
+       <option id ="newcases4">California</option>
+       <option id ="newcases3">Texas</option>
+       <option id ="newcases2">Arizona</option>
+       <option id ="newcases1">New York</option>
     </select>  
     </fieldset>
     </form>
@@ -1452,12 +1452,12 @@
     <form>
     <fieldset>
     <legend>Countries</legend>
-    <button id="button" class="autocompare">United States</button> 
+    <button id="button2" class="autocompare">United States</button> 
     <select id="selectButton">
-       <option id ="button4">California</option>
-       <option id ="button3">Texas</option>
-       <option id ="button2">Arizona</option>
-       <option id ="button1">New York</option>
+       <option id ="newdeath4">California</option>
+       <option id ="newdeath3">Texas</option>
+       <option id ="newdeath2">Arizona</option>
+       <option id ="newdeath1">New York</option>
     </select>  
     </fieldset>
     </form>
@@ -1466,12 +1466,12 @@
     <form>
     <fieldset>
     <legend>Countries</legend>
-    <button id="button" class="autocompare">United States</button> 
+    <button id="button3" class="autocompare">United States</button> 
     <select id="selectButton">
-       <option id ="button4">California</option>
-       <option id ="button3">Texas</option>
-       <option id ="button2">Arizona</option>
-       <option id ="button1">New York</option>
+       <option id ="curhos4">California</option>
+       <option id ="curhos3">Texas</option>
+       <option id ="curhos2">Arizona</option>
+       <option id ="curhos1">New York</option>
     </select>  
     </fieldset>
     </form>
@@ -1480,12 +1480,12 @@
     <form>
     <fieldset>
     <legend>Countries</legend>
-    <button id="button" class="autocompare">United States</button> 
+    <button id="button4" class="autocompare">United States</button> 
     <select id="selectButton">
-       <option id ="button4">California</option>
-       <option id ="button3">Texas</option>
-       <option id ="button2">Arizona</option>
-       <option id ="button1">New York</option>
+       <option id ="curvent4">California</option>
+       <option id ="curvent3">Texas</option>
+       <option id ="curvent2">Arizona</option>
+       <option id ="curvent1">New York</option>
     </select>  
     </fieldset>
     </form>
@@ -1494,12 +1494,12 @@
     <form>
     <fieldset>
     <legend>Countries</legend>
-    <button id="button" class="autocompare">United States</button> 
+    <button id="button5" class="autocompare">United States</button> 
     <select id="selectButton">
-       <option id ="button4">California</option>
-       <option id ="button3">Texas</option>
-       <option id ="button2">Arizona</option>
-       <option id ="button1">New York</option>
+       <option id ="curicu4">California</option>
+       <option id ="curicu3">Texas</option>
+       <option id ="curicu2">Arizona</option>
+       <option id ="curicu1">New York</option>
     </select>  
     </fieldset>
     </form>
@@ -1508,12 +1508,12 @@
     <form>
     <fieldset>
     <legend>Countries</legend>
-    <button id="button" class="autocompare">United States</button> 
+    <button id="button6" class="autocompare">United States</button> 
     <select id="selectButton">
-       <option id ="button4">California</option>
-       <option id ="button3">Texas</option>
-       <option id ="button2">Arizona</option>
-       <option id ="button1">New York</option>
+       <option id ="totcases4">California</option>
+       <option id ="totcases3">Texas</option>
+       <option id ="totcases2">Arizona</option>
+       <option id ="totcases1">New York</option>
     </select>  
     </fieldset>
     </form>
@@ -1522,17 +1522,30 @@
     <form>
     <fieldset>
     <legend>Countries</legend>
-    <button id="button" class="autocompare">United States</button> 
+    <button id="button7" class="autocompare">United States</button> 
     <select id="selectButton">
-       <option id ="button4">California</option>
-       <option id ="button3">Texas</option>
-       <option id ="button2">Arizona</option>
-       <option id ="button1">New York</option>
+       <option id ="totdeath4">California</option>
+       <option id ="totdeath3">Texas</option>
+       <option id ="totdeath2">Arizona</option>
+       <option id ="totdeath1">New York</option>
     </select>  
     </fieldset>
     </form>
     </div>
-    <div id="us-covidtrack-state-chart"></div>
+    <div id="us-covidtrack-state-chart">
+    <form>
+    <fieldset>
+    <legend>Countries</legend>
+    <button id="button8" class="autocompare">United States</button> 
+    <select id="selectButton">
+       <option id ="totcomp4">California</option>
+       <option id ="totcomp3">Texas</option>
+       <option id ="totcomp2">Arizona</option>
+       <option id ="totcomp1">New York</option>
+    </select>  
+    </fieldset>
+    </form>
+    </div>
   </div>
   </div>
 <!--  <div class="data-table-covid-track"> 
