--- a/index.html
+++ b/index.html
@@ -2185,7 +2185,11 @@
      <a href="javascript:void(0)" class="alert-btn"><i class="fas fa-exclamation-triangle fa-fw" aria-hidden="true"></i>Interesting Read</a> 
      <a href="https://pubs.acs.org/doi/10.1021/acsnano.0c03252" class="btn">Link to Study</a> 
     </div>
-    <div class="article-container">
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>       
+<div class="article-container">
     <div class="news-box news-box-a">
      <h3>Study to Describe the Safety, Tolerability, Immunogenicity, and Efficacy of RNA Vaccine Candidates Against COVID-19 in Healthy Individuals</h3>
      <p class="price">Source: Clinical Trials on April 30, 2020</p>
@@ -2195,7 +2199,7 @@
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
    </div>       
-   <div class="article-container">
+<div class="article-container">
     <div class="news-box news-box-a">
      <h3>Face Masks and GDP</h3>
      <p class="price">Source: Goldman Sachs on June 29, 2020</p>
@@ -2205,7 +2209,7 @@
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
    </div>
-   <div class="article-container">
+<div class="article-container">
     <div class="news-box news-box-a">
      <h3>Male balding is a major risk factor for severe COVID-19</h3>
      <p class="price">Source: Us National Library of Medicine on July 22, 2020</p>
