--- a/globalcases.html
+++ b/globalcases.html
@@ -1397,7 +1397,21 @@
     </fieldset>
     </form>
   </div>
-  <div id="test2"></div>
+  <div>
+    <div id="test2"></div>
+    <form>
+    <fieldset>
+    <legend>Countries</legend>
+    <!-- <button id="button" class="autocompare">Reset</button> -->
+    <select id="selectButton2">
+       <option id ="2button4">United States</option>
+       <option id ="2button3">India</option>
+       <option id ="2button2">Russia</option>
+       <option id ="2button1">Canada</option>
+    </select>  
+    </fieldset>
+    </form>
+  </div>
   <div id="test3"></div> 
 </section>
 
