--- a/index.html
+++ b/index.html
@@ -521,7 +521,20 @@
 </div> -->
 <div class="price">John Hopkins University Charts
  <div class="us-johnhopkins-chart">
-   <svg></svg>
+    <div>  
+    <form>
+    <fieldset>
+    <legend>State Options</legend>
+    <button id="" class="autocompare">United States</button> 
+    <select id="">
+       <option id ="">California</option>
+       <option id ="">Texas</option>
+       <option id ="">Arizona</option>
+       <option id ="">New York</option>
+    </select>  
+    </fieldset>
+    </form>
+    </div>
  </div>
 </div>
   </div>  
@@ -1438,9 +1451,9 @@
     <div>  
     <form>
     <fieldset>
-    <legend>Countries</legend>
+    <legend>State Options</legend>
     <button id="button1" class="autocompare">United States</button> 
-    <select id="selectButton">
+    <select id="newCaseSelectButton">
        <option id ="newcases4">California</option>
        <option id ="newcases3">Texas</option>
        <option id ="newcases2">Arizona</option>
@@ -1453,9 +1466,9 @@
     <div>  
     <form>
     <fieldset>
-    <legend>Countries</legend>
+    <legend>State Options</legend>
     <button id="button2" class="autocompare">United States</button> 
-    <select id="selectButton">
+    <select id="newDeathSelectButton">
        <option id ="newdeath4">California</option>
        <option id ="newdeath3">Texas</option>
        <option id ="newdeath2">Arizona</option>
@@ -1468,9 +1481,9 @@
     <div>  
     <form>
     <fieldset>
-    <legend>Countries</legend>
+    <legend>State Options</legend>
     <button id="button3" class="autocompare">United States</button> 
-    <select id="selectButton">
+    <select id="curHosSelectButton">
        <option id ="curhos4">California</option>
        <option id ="curhos3">Texas</option>
        <option id ="curhos2">Arizona</option>
@@ -1483,9 +1496,9 @@
     <div>  
     <form>
     <fieldset>
-    <legend>Countries</legend>
+    <legend>State Options</legend>
     <button id="button4" class="autocompare">United States</button> 
-    <select id="selectButton">
+    <select id="curVentSelectButton">
        <option id ="curvent4">California</option>
        <option id ="curvent3">Texas</option>
        <option id ="curvent2">Arizona</option>
@@ -1498,9 +1511,9 @@
     <div>  
     <form>
     <fieldset>
-    <legend>Countries</legend>
+    <legend>State Options</legend>
     <button id="button5" class="autocompare">United States</button> 
-    <select id="selectButton">
+    <select id="curIcuSelectButton">
        <option id ="curicu4">California</option>
        <option id ="curicu3">Texas</option>
        <option id ="curicu2">Arizona</option>
@@ -1513,9 +1526,9 @@
     <div>  
     <form>
     <fieldset>
-    <legend>Countries</legend>
+    <legend>State Options</legend>
     <button id="button6" class="autocompare">United States</button> 
-    <select id="selectButton">
+    <select id="totCaseSelectButton">
        <option id ="totcases4">California</option>
        <option id ="totcases3">Texas</option>
        <option id ="totcases2">Arizona</option>
@@ -1528,9 +1541,9 @@
     <div>  
     <form>
     <fieldset>
-    <legend>Countries</legend>
+    <legend>State Options</legend>
     <button id="button7" class="autocompare">United States</button> 
-    <select id="selectButton">
+    <select id="totDeathSelectButton">
        <option id ="totdeath4">California</option>
        <option id ="totdeath3">Texas</option>
        <option id ="totdeath2">Arizona</option>
@@ -1543,9 +1556,9 @@
     <div>  
     <form>
     <fieldset>
-    <legend>Countries</legend>
+    <legend>State Options</legend>
     <button id="button8" class="autocompare">United States</button> 
-    <select id="selectButton">
+    <select id="newCompSelectButton">
        <option id ="totcomp4">California</option>
        <option id ="totcomp3">Texas</option>
        <option id ="totcomp2">Arizona</option>
@@ -4483,7 +4496,8 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>   
+   </div>
+<div class="article-container">    
     <div class="news-box news-box-a">
      <h3>Low Zinc Levels at Admission Associates with Poor Clinical Outcomes in SARS-CoV-2 Infection</h3>
      <p class="price">Source: MDPI, Published on February 9, 2021</p>
