--- a/globalcases.html
+++ b/globalcases.html
@@ -61,16 +61,18 @@
    <p class="price us-case-confirmed">Latest Total Number of Cases</p>
    <p class="price us-case-date-top"></p>
    <p class="price us-testing"></p>  
-   <a href="https://coronavirus.jhu.edu/" class="btn">See More</a>
-   <a href="https://github.com/CSSEGISandData/COVID-19" class="btn">Data Source</a> 
+   <a href="https://coronavirus.jhu.edu/" class="btn">Additional Info</a>
+   <a href="https://github.com/CSSEGISandData/COVID-19" class="btn">Data Source</a>
+   <a href="https://covid19api.com/" class="btn">Data API</a>  
   </div>
   <div class="top-box top-box-b">
    <h3>Global Deaths</h4>
    <p class="price us-case-death">Latest Total Number of Death</p>
    <p class="price us-case-date-bot"></p>
    <p class="price us-testing-two"></p>  
-   <a href="https://coronavirus.jhu.edu/" class="btn">See More</a>
-   <a href="https://github.com/CSSEGISandData/COVID-19" class="btn">Data Source</a> 
+   <a href="https://coronavirus.jhu.edu/" class="btn">Additional Info</a>
+   <a href="https://github.com/CSSEGISandData/COVID-19" class="btn">Data Source</a>
+   <a href="https://covid19api.com/" class="btn">Data API</a>  
   </div>
  </section>
     
