--- a/globalcases.html
+++ b/globalcases.html
@@ -180,7 +180,7 @@
       <td scope="row">Aruba</td>
       <td class="awCaseConfirm"></td>
       <td class="awCaseDeath"></td>
-      <td class="awDate"></td>       
+      <td class="awDate">Delete</td>       
      </tr>
      <tr> 
       <td scope="row">Australia</td>
@@ -256,7 +256,7 @@
       <td class="btDate"></td>      
      </tr>
      <tr>
-      <td scope="row">Bolivarian Republic of Venezuela</td>
+      <td scope="row">Bolivarian Republic of Venezuela (Bolivia)</td>
       <td class="veCaseConfirm"></td>
       <td class="veCaseDeath"></td>
       <td class="veDate"></td>       
@@ -304,10 +304,10 @@
       <td class="biDate"></td>        
      </tr>
      <tr>
-      <td scope="row">Cabo Verde</td>
+      <td scope="row">Cape Verde</td>
       <td class="cvCaseConfirm"></td>
       <td class="cvCaseDeath"></td>
-      <td class="cvDate"></td>       
+      <td class="cvDate">Delete</td>       
      </tr>
      <tr>
       <td scope="row">Cambodia</td>
@@ -331,7 +331,7 @@
       <td scope="row">Cayman Islands</td>
       <td class="kyCaseConfirm"></td>
       <td class="kyCaseDeath"></td>
-      <td class="kyDate"></td>       
+      <td class="kyDate">Delete</td>       
      </tr>
      <tr>
       <td scope="row">Central African Republic</td>
@@ -370,7 +370,7 @@
       <td class="kmDate"></td>       
      </tr>
      <tr>
-      <td scope="row">Congo</td>
+      <td scope="row">Congo (Brazzaville)</td>
       <td class="cgCaseConfirm"></td>
       <td class="cgCaseDeath"></td>
       <td class="cgDate"></td>       
@@ -403,7 +403,7 @@
       <td scope="row">Curacao</td>
       <td class="cwCaseConfirm"></td>
       <td class="cwCaseDeath"></td>
-      <td class="cwDate"></td>        
+      <td class="cwDate">Delete</td>        
      </tr>
      <tr>
       <td scope="row">Cyprus</td>
@@ -417,14 +417,14 @@
       <td class="czCaseDeath"></td>
       <td class="czDate"></td>        
      </tr>
-     <tr>
+     <tr> <!-- fix starting here -->
       <td scope="row">Democratic People's Republic of Korea</td>
       <td class="kpCaseConfirm"></td>
       <td class="kpCaseDeath"></td>
       <td class="kpDate"></td>       
      </tr>
      <tr>
-      <td scope="row">Democratic Republic of the Congo</td>
+      <td scope="row">Democratic Republic of the Congo (Kinshasa)</td>
       <td class="cdCaseConfirm"></td>
       <td class="cdCaseDeath"></td>
       <td class="cdDate"></td>       
