--- a/index.html
+++ b/index.html
@@ -8981,6 +8981,16 @@
    </div>    
 <div class="article-container">
     <div class="news-box news-box-a">
+     <h3>Immune Memory in Mild COVID-19 Patients and Unexposed Donors Reveals Persistent T Cell Responses After SARS-CoV-2 Infection</h3>
+     <p class="price">Source: Frontiers, Published on March 11, 2021</p>
+     <a href="https://doi.org/10.3389/fimmu.2021.636768" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>     
+<div class="article-container">
+    <div class="news-box news-box-a">
      <h3>Americans support restricting unvaccinated people from offices, travel: Reuters poll</h3>
      <p class="price">Source: Reuters, Published on March 12, 2021</p>
      <a href="https://www.reuters.com/article/us-health-coronavirus-vaccines-poll-idUSKBN2B41J0" class="btn">Link to Article</a>
