--- a/globalcases.html
+++ b/globalcases.html
@@ -12,8 +12,6 @@
   <script rel="preconnect" src="https://d3js.org/d3.v4.min.js" as="script" crossorigin></script>
   <script rel="dns-prefetch" src="https://d3js.org/d3.v4.min.js" as="script"></script>
   <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
-    <script rel="preconnect" src="https://d3js.org/d3.v6.min.js" as="script" crossorigin></script>
-  <script rel="dns-prefetch" src="https://d3js.org/d3.v6.min.js" as="script"></script>
   <link rel="preload" href="https://fonts.googleapis.com/css2?family=Itim&display=swap" as="style" />
   <!-- <link rel="dns-prefetch" href="https://fonts.googleapis.com/css2?family=Itim&display=swap" as="style" /> -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Itim&display=swap" />
@@ -1430,6 +1428,8 @@
 <script async src="js/globaldataviz.js"></script>
 <script defer src="js/swiperaction.js"></script>
 <script async src="js/globaldatacollection.js"></script>  
-<script src="js/anime.min.js"></script>    
+<script src="js/anime.min.js"></script>
+<script src="js/d3.v6.min.js"></script>    
+ 
 </body>
 </html>
