--- a/covidnews.html
+++ b/covidnews.html
@@ -7095,5 +7095,35 @@
 <script defer src="js/swiperaction.js"></script>
 <script defer src="js/main.js"></script>
 <script src="js/anime.min.js"></script>
+<script>
+  //DOM Elements
+const usCaseDeath = document.querySelector(".us-case-death");
+const usCaseConfirm = document.querySelector(".us-case-confirmed"); 
+
+//Define API
+const globalapi1 = 'https://corona-api.com/countries';
+const globalapi2 = 'https://api.covid19api.com/summary';
+const localapi1 = 'https://api.covidtracking.com/v1/us/current.json';
+const localapi2 = 'https://corona-api.com/countries/US';
+
+//US Count from covid19-api.org      
+   fetch(globalapi2)
+  .then(response => {
+   return response.json();
+  })
+  .then(data => {
+   console.log(data);
+   options = {
+      year: 'numeric', month: 'numeric', day: 'numeric',
+      hour: 'numeric', minute: 'numeric', second: 'numeric', 
+      dayPeriod: 'short',
+      timeZone: 'America/Los_Angeles'
+   };
+   const date = new Date();
+   const datea = new Intl.DateTimeFormat('default', options).format(date)   
+   usCaseDeath.textContent = addCommas(data.Countries[181].TotalDeaths) + ' as of ' + datea;   
+   usCaseConfirm.textContent = addCommas(data.Countries[181].TotalConfirmed) + ' as of ' + datea;    
+  });
+</script>  
 </body>
 </html>
