--- a/index.html
+++ b/index.html
@@ -2312,6 +2312,29 @@
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
    </div>
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>First Participants Dosed in Phase 1 Study Evaluating mRNA-1283, Moderna’s Next Generation COVID-19 Vaccine</h3>
+     <p class="price">Source: Moderna, Published on March 15, 2021</p>
+     <a href="https://investors.modernatx.com/news-releases/news-release-details/first-participants-dosed-phase-1-study-evaluating-mrna-1283/" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>South Korean province orders COVID testing for foreigners, sparking complaints of xenophobia</h3>
+     <p class="price">Source: Reuters, Published on March 15, 2021</p>
+     <a href="https://www.reuters.com/article/us-health-coronavirus-southkorea-foreign-idUSKBN2B712S" class="btn">Link to Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>       
+<div>
+  <a href="javascript:void(0)" class="news-btn covidnews"><i class="fas fa-plus fa-fw" aria-hidden="true"></i>More Coronavirus News</a>  
+</div>
   
     
 
