--- a/covidnews.html
+++ b/covidnews.html
@@ -74,6 +74,16 @@
 <!-- Box Section -->
  <section class="boxes">
   <div class="box">
+   <i class="fas fa-plus fa-4x"></i>
+   <h3>Global Cases</h3>
+   <p class="us-testing">Loading</p>
+  </div> 
+  <div class="box">
+   <i class="fas fa-plus fa-4x"></i>
+   <h3>Global Deaths</h3>
+   <p class="us-testing-two">Loading</p>
+  </div> 
+  <div class="box">
    <i class="fas fa-users fa-4x"></i>
    <h3>Tabular Data</h3>
    <p>Raw Data</p>
