--- a/covidnews.html
+++ b/covidnews.html
@@ -6645,7 +6645,17 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>    
+   </div>   
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Effectiveness of three versus six feet of physical distancing for controlling spread of COVID-19 among primary and secondary students and staff: A retrospective, state-wide cohort study</h3>
+     <p class="price">Source: Oxford Academics, Published on March 10, 2021</p>
+     <a href="https://doi.org/10.1093/cid/ciab230" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>     
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Fraud, airport delays spur move for secure COVID-19 test document</h3>
