--- a/globalcases.html
+++ b/globalcases.html
@@ -1414,7 +1414,20 @@
     </fieldset>
     </form>
   </div>
-  <div id="test3"></div> 
+  <div id="test3">
+    <form>
+    <fieldset>
+    <legend>Countries</legend>
+    <!-- <button id="button" class="autocompare">Reset</button> -->
+    <select id="selectButton3">
+       <option id ="3button4">United States</option>
+       <option id ="3button3">India</option>
+       <option id ="3button2">Russia</option>
+       <option id ="3button1">Canada</option>
+    </select>  
+    </fieldset>
+    </form>
+  </div> 
 </section>
 
 <!-- Footer -->
