--- a/globalcases.html
+++ b/globalcases.html
@@ -1391,10 +1391,10 @@
     <legend>Countries</legend>
     <!-- <button id="button" class="autocompare">Reset</button> -->
     <select id="selectButton">
-       <option id ="button4">United States</option>
-       <option id ="button3">India</option>
-       <option id ="button2">Russia</option>
-       <option id ="button1">Canada</option>
+       <option id="button4">United States</option>
+       <option id="button3">India</option>
+       <option id="button2">Russia</option>
+       <option id="button1">Canada</option>
     </select>  
     </fieldset>
     </form>
@@ -1406,24 +1406,24 @@
     <legend>Countries</legend>
     <!-- <button id="button" class="autocompare">Reset</button> -->
     <select id="selectButton2">
-       <option id ="2button4">United States</option>
-       <option id ="2button3">India</option>
-       <option id ="2button2">Russia</option>
-       <option id ="2button1">Canada</option>
+       <option id="2button4">United States</option>
+       <option id="2button3">India</option>
+       <option id="2button2">Russia</option>
+       <option id="2button1">Canada</option>
     </select>  
     </fieldset>
     </form>
   </div>
-  <div id="test3">
+  <div id="test3"></div>
     <form>
     <fieldset>
     <legend>Countries</legend>
     <!-- <button id="button" class="autocompare">Reset</button> -->
     <select id="selectButton3">
-       <option id ="3button4">United States</option>
-       <option id ="3button3">India</option>
-       <option id ="3button2">Russia</option>
-       <option id ="3button1">Canada</option>
+       <option class="3button4">United States</option>
+       <option class="3button3">India</option>
+       <option class="3button2">Russia</option>
+       <option class="3button1">Canada</option>
     </select>  
     </fieldset>
     </form>
