--- a/covidnews.html
+++ b/covidnews.html
@@ -6485,6 +6485,16 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
+   </div>  
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Association of vitamin D status with hospital morbidity and mortality in adult hospitalized COVID-19 patients</h3>
+     <p class="price">Source: AACE Endocrine Practice, Published on March 8, 2021</p>
+     <a href="https://doi.org/10.1016/j.eprac.2021.02.013" class="btn">Link to Study Article</a> 
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
    </div>    
 <div class="article-container">
     <div class="news-box news-box-a">
@@ -7027,6 +7037,16 @@
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
    </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Multiple SARS-CoV-2 variants escape neutralization by vaccine-induced humoral immunity</h3>
+     <p class="price">Source: Science Direct, Published on March 12, 2021</p>
+     <a href="https://doi.org/10.1016/j.cell.2021.03.013" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>      
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Americans support restricting unvaccinated people from offices, travel: Reuters poll</h3>
