--- a/index.html
+++ b/index.html
@@ -2562,7 +2562,47 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>    
+   </div> 
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Serum Neutralizing Activity Elicited by mRNA-1273 Vaccine</h3>
+     <p class="price">Source: New England Journal of Medicine (NEJM), Published on March 17, 2021</p>
+     <a href="https://www.nejm.org/doi/full/10.1056/NEJMc2102179" class="btn">Link to Study Article</a> 
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>  
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>COVID-19 hospitalization rates rise exponentially with age, inversely proportional to thymic T-cell production</h3>
+     <p class="price">Source: Royal Society, Published on March 17, 2021</p>
+     <a href="https://doi.org/10.1098/rsif.2020.0982" class="btn">Link to Study Article</a> 
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>   
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Effect of Intermediate-Dose vs Standard-Dose Prophylactic Anticoagulation on Thrombotic Events, Extracorporeal Membrane Oxygenation Treatment, or Mortality Among Patients With COVID-19 Admitted to the Intensive Care Unit</h3>
+     <p class="price">Source: Jama Network, Published on March 18, 2021</p>
+     <a href="https://jamanetwork.com/journals/jama/fullarticle/2777829" class="btn">Link to Study Article</a> 
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>   
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>COVID-19 Vaccine AstraZeneca: benefits still outweigh the risks despite possible link to rare blood clots with low blood platelets</h3>
+     <p class="price">Source: European Medicine Agency (EMA), Published on March 18, 2021</p>
+     <a href="https://www.ema.europa.eu/en/news/covid-19-vaccine-astrazeneca-benefits-still-outweigh-risks-despite-possible-link-rare-blood-clots" class="btn">Link to Article</a> 
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>     
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>J&J developing several next-generation COVID-19 vaccines, says CEO</h3>
