--- a/covidnews.html
+++ b/covidnews.html
@@ -6981,7 +6981,7 @@
     <div class="news-box news-box-a">
      <h3>Novavax Confirms High Levels of Efficacy Against Original and Variant COVID-19 Strains in United Kingdom and South Africa Trials</h3>
      <p class="price">Source: Novavax, Published on March 11, 2021</p>
-     <a href="https://ir.novavax.com/news-releases/news-release-details/novavax-confirms-high-levels-efficacy-against-original-and?sf140129199=1" class="btn">Link to Article</a>
+     <a href="http://ir.novavax.com/news-releases/news-release-details/novavax-confirms-high-levels-efficacy-against-original-and-0" class="btn">Link to Article</a>
     </div>
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
