--- a/covidnews.html
+++ b/covidnews.html
@@ -5962,7 +5962,17 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>     
+   </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Prevalence of Inflammatory Heart Disease Among Professional Athletes With Prior COVID-19 Infection Who Received Systematic Return-to-Play Cardiac Screening</h3>
+     <p class="price">Source: Jama Network, Published on March 4, 2021</p>
+     <a href="https://jamanetwork.com/journals/jamacardiology/fullarticle/2777308" class="btn">Link to Research Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>       
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Oxford study indicates AstraZeneca effective against Brazil variant, source says</h3>
@@ -7762,7 +7772,17 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>     
+   </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Neutralizing Antibodies Against SARS-CoV-2 Variants After Infection and Vaccination</h3>
+     <p class="price">Source: Jama Network, Published on March 19, 2021</p>
+     <a href="https://jamanetwork.com/journals/jama/fullarticle/2777898" class="btn">Link to Research Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>      
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Impacts of introducing and lifting nonpharmaceutical interventions on COVID-19 daily growth rate and compliance in the United States</h3>
