--- a/covidnews.html
+++ b/covidnews.html
@@ -3872,6 +3872,16 @@
    </div>
 <div class="article-container">
     <div class="news-box news-box-a">
+     <h3>Exploratory analysis of immunization records highlights decreased SARS-CoV-2 rates in individuals with recent non-COVID-19 vaccinations</h3>
+     <p class="price">Source: Nature, Published on February 21, 2021</p>
+     <a href="https://doi.org/10.1038/s41598-021-83641-y" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
+<div class="article-container">
+    <div class="news-box news-box-a">
      <h3>Beyond 100M: Biden team aiming for bigger vaccine numbers</h3>
      <p class="price">Source: AP News, Published on February 21, 2021</p>
      <a href="https://apnews.com/article/biden-team-more-vaccine-shots-7969686ebe0b19caa8a3c7b5eda0faba" class="btn">Link to Article</a>
