--- a/covidnews.html
+++ b/covidnews.html
@@ -5992,7 +5992,17 @@
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
     </div>
-   </div>       
+   </div> 
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Peginterferon lambda for the treatment of outpatients with COVID-19: a phase 2, placebo-controlled randomised trial</h3>
+     <p class="price">Source: Lancet, Published on March 4, 2021</p>
+     <a href="https://doi.org/10.1016/S2213-2600(20)30566-X" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>    
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Oxford study indicates AstraZeneca effective against Brazil variant, source says</h3>
@@ -7806,7 +7816,7 @@
 <div class="article-container">
     <div class="news-box news-box-a">
      <h3>Efficacy of the ChAdOx1 nCoV-19 Covid-19 Vaccine against the B.1.351 Variant</h3>
-     <p class="price">Source: New Engaldn Journal of Medicine (NEJM), Published on March 16, 2021</p>
+     <p class="price">Source: New England Journal of Medicine (NEJM), Published on March 16, 2021</p>
      <a href="https://www.nejm.org/doi/full/10.1056/NEJMoa2102214" class="btn">Link to Study Article</a> 
     </div>
     <div class="news-box news-box-b">
@@ -7815,9 +7825,39 @@
    </div>    
 <div class="article-container">
     <div class="news-box news-box-a">
+     <h3>Four-Month Clinical Status of a Cohort of Patients After Hospitalization for COVID-19</h3>
+     <p class="price">Source: Jama Network, Published on March 17, 2021</p>
+     <a href="https://jamanetwork.com/journals/jama/fullarticle/2777787" class="btn">Link to Research Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>     
+<div class="article-container">
+    <div class="news-box news-box-a">
      <h3>Neutralizing Antibodies Against SARS-CoV-2 Variants After Infection and Vaccination</h3>
      <p class="price">Source: Jama Network, Published on March 19, 2021</p>
      <a href="https://jamanetwork.com/journals/jama/fullarticle/2777898" class="btn">Link to Research Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>      
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>Routine asymptomatic testing strategies for airline travel during the COVID-19 pandemic: a simulation study</h3>
+     <p class="price">Source: Lancet, Published on March 22, 2021</p>
+     <a href="https://www.thelancet.com/journals/laninf/article/PIIS1473-3099(21)00134-1/fulltext" class="btn">Link to Study Article</a> 
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>        
+<div class="article-container">
+    <div class="news-box news-box-a">
+     <h3>SARS-CoV-2 Infection after Vaccination in Health Care Workers in California</h3>
+     <p class="price">Source: New England Journal of Medicine (NEJM), Published on March 23, 2021</p>
+     <a href="https://www.nejm.org/doi/full/10.1056/NEJMc2101927" class="btn">Link to Study Article</a> 
     </div>
     <div class="news-box news-box-b">
      <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
