--- a/covidnews.html
+++ b/covidnews.html
@@ -7089,6 +7089,17 @@
    </div>    
 <div class="article-container">
     <div class="news-box news-box-a">
+     <h3>Flu Shot Associated With Fewer, Less Severe COVID Cases</h3>
+     <p class="price">Source: Michigian Health Lab, Published on March 12, 2021</p>
+     <a href="https://labblog.uofmhealth.org/lab-report/flu-shot-associated-fewer-less-severe-covid-cases" class="btn">Link to Article</a> 
+     <a href="https://doi.org/10.1016/j.ajic.2021.02.012" class="btn">Link to Study Article</a>
+    </div>
+    <div class="news-box news-box-b">
+     <img src="img/coronavirus-19-mobile.jpg" alt="COVID-19 News Image">
+    </div>
+   </div>      
+<div class="article-container">
+    <div class="news-box news-box-a">
      <h3>Multiple SARS-CoV-2 variants escape neutralization by vaccine-induced humoral immunity</h3>
      <p class="price">Source: Science Direct, Published on March 12, 2021</p>
      <a href="https://doi.org/10.1016/j.cell.2021.03.013" class="btn">Link to Study Article</a>
